<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/ivLeftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/left_arrow"
            android:scaleType="fitXY"
            android:contentDescription="@string/left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivRightArrow"
            android:layout_alignTop="@+id/ivLeftArrow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/wo"
            android:textColor="@color/white"
            android:textSize="30sp"
            />

        <ImageButton
            android:id="@+id/ivRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/right_arrow"
            android:scaleType="fitXY"
            android:contentDescription="@string/right_arrow"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/centralesansbold"
        android:text="@string/month"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMonth"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/centralesansbook"
        android:text="@string/time"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTime"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/tvAhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/ahi"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAhi"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/two"
            android:textColor="@color/text_color"
            android:textSize="30sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvGebruik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/gebruik"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvGebruik"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/three_hrs"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvTime"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvPassendMasker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/passend_masker"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassendMasker"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/forty_eight"
            android:textColor="@color/text_color"
            android:textSize="30sp"/>
    </RelativeLayout>


</RelativeLayout>