<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/description_background">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/centralesansbook"
        android:text="@string/gebruikgegevens"
        android:textColor="@color/white"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeading"
        android:layout_marginStart="10dp"
        >

        <TextView
            android:id="@+id/tvMinDruk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/min_druk"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/tvMaxDruk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMinDruk"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/max_druk"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMaxDruk"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/ninety_druk"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvHeading"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/tvMinDrukValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/min_drukValue"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvMaxDrukValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMinDrukValue"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/max_drukValue"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMaxDrukValue"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/centralesansbook"
            android:text="@string/h2o"
            android:textColor="@color/white"/>

    </RelativeLayout>


</RelativeLayout>